--- a/style.css
+++ b/style.css
@@ -1,245 +1,64 @@
-:root{
-    --yellow:#f9ca24;
+.header {
+    background: #f44;
+    height: 40px;
 }
 
-*{
-    font-family: 'Nunito', sans-serif;
-    margin:0; padding:0;
-    box-sizing: border-box;
-    text-decoration: none;
-    outline: none; border:none;
-    text-transform: capitalize;
-    transition: all .2s linear;
-}
-
-*::selection{
-    background:var(--yellow);
-    color:#333;
-}
-
-html{
-    font-size: 62.5%;
-    overflow-x: hidden;
-}
-
-html::-webkit-scrollbar{
-    width:1.4rem;
-}
-
-html::-webkit-scrollbar-track{
-    background:#222;
-}
-
-html::-webkit-scrollbar-thumb{
-    background:var(--yellow);
-}
-
-body{
-    background:#111;
-    overflow-x: hidden;
-    padding-left: 35rem;
-}
-
-section{
-    min-height: 100vh;
-    padding:1rem;
-}
-
-.btn:hover{
-    background:var(--yellow);
-}
-
-.heading{
-    text-align: center;
-    margin:0 6rem;
-    font-size: 4rem;
-    padding:1rem;
-    border-bottom: .1rem solid #fff4;
-    color:#fff;
-}
-
-.heading span{
-    color:var(--yellow);
-}
-
-header{
+.footer {
     position: fixed;
-    top:0; left:0;
-    z-index: 1000;
-    height:100%;
-    width:35rem;
-    background:#1a1a1a;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-flow: column;
-    text-align: center;
+    bottom:0;
+    height: 40px;
+    width: 100%;
+    background: #f44;
 }
 
-header .user img{
-    height:17rem;
-    width:17rem;
-    border-radius: 50%;
-    object-fit: cover;
-    margin-bottom: 1rem;
-    border:.7rem solid var(--yellow);
+.main {
+    height: 100%;
 }
 
-header .user .name{
-    font-size: 3.5rem;
-    color:#fff;
+.content {
+    background-color: lightgrey;
+    bottom: 40px;
+    top:0px;
+    right:0px;
 }
 
-header .user .post{
-    font-size: 2rem;
-    color:#eee;
+
+
+/* Sidebar Styles */
+.sidebar {
+    position: fixed;
+    left: 0;
 }
 
-header .navbar{
-    width:100%;
-}
-
-header .navbar ul{
+.sidebar-nav {
     list-style: none;
-    padding:1rem 3rem;
 }
 
-header .navbar ul li a{
+.sidebar-nav p {
+    text-indent: 60px;
+    line-height: 40px;
+}
+
+.sidebar-nav li {
+    text-indent: 20px;
+    line-height: 40px;
+}
+
+.sidebar-nav li a {
     display: block;
-    padding:1rem;
-    margin:1.5rem 0;
-    background:#333;
-    color:#fff;
-    font-size: 2rem;
-    border-radius: 5rem;
+    text-decoration: none;
+    color: gray;
+    /* color: #999999; */
 }
 
-header .navbar ul li a:hover{
-    background:var(--yellow);
+.sidebar-nav li a:hover {
+    text-decoration: none;
+    color: #f44;
+    /* background: rgba(255,255,255,0.2); */
 }
 
-.home{
-    display: flex;
-    justify-content: center;
-    flex-flow: column;
-    padding:0 15rem;
+.sidebar-nav li a:active,
+.sidebar-nav li a:focus {
+    color: #f44;
+    text-decoration: none;
 }
-
-.home h3{
-    font-size: 2.5rem;
-    color:#fff;
-}
-
-.home h1{
-    font-size:5rem;
-    color:#fff;
-}
-
-.home h1 span{
-    color:var(--yellow);
-}
-
-.home p{
-    font-size:2rem;
-    color:#eee;
-    padding: 1rem 0;
-}
-
-.about .row{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-    padding:1rem 0;
-}
-
-.about .row .info{
-    flex:1 1 48rem;
-    padding:2rem 1rem;
-    padding-left: 6rem;
-}
-
-.about .row .info h3{
-    font-size: 2rem;
-    color:var(--yellow);
-    padding:1rem 0;
-    font-weight: normal;
-}
-
-.about .row .info h3 span{
-    color:#eee;
-    padding:0 .5rem;
-}
-
-.about .row .counter{
-    flex:1 1 48rem;
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.about .row .counter .box{
-    width:20rem;
-    background:#222;
-    text-align: center;
-    padding: 2rem;
-    margin:2rem;
-}
-
-.about .row .counter .box span{
-    font-size: 4rem;
-    color:var(--yellow);
-}
-
-.about .row .counter .box h3{
-    font-size: 2rem;
-    color:#fff;
-}
-
-.contact .row{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
-}
-
-.contact .row .content{
-    flex:1 1 30rem;
-    padding:4rem;
-    padding-bottom: 0;
-}
-
-.contact .row .content .title{
-    text-transform: uppercase;
-    color:#fff;
-    font-size: 3rem;
-    padding-bottom: 2rem;
-}
-
-.contact .row .content .info h3{
-    display: flex;
-    align-items: center;
-    font-size: 2rem;
-    color:#eee;
-    padding:1rem 0;
-    font-weight: normal;
-}
-
-.contact .row .content .info h3 i{
-    padding-right: 1rem;
-    color:var(--yellow);
-}
-
-p{
-    font-size:3rem;
-}
-
-
-
-
-
-
-
-
-
-
